--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
   <body id="home">
     <header>
       <div class="logo">Edie</div>
-      <nav class="header-nav">
+      <nav class="header-nav nav-open">
+        <i class="fas fa-times menu-close hidden"></i>
         <a href="#home">Home</a>
         <a href="#services">Services</a>
         <a href="#our-work">Our Work</a>
         <a href="#our-team">Team</a>
         <a href="#footer">Contact</a>
       </nav>
+      <i class="fas fa-bars menu-btn hidden"></i>
     </header>
     <section class="cta">
       <span>Unhappy with your website?</span>
@@ -229,4 +231,5 @@
       </div>
     </footer>
   </body>
+  <script src="./menu.js"></script>
 </html>
